# SumoKuBot

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_and_benchmark.sh  compile_and_debug.sh  compile_and_run.sh  compile_and_test.sh  linux-x86_64.toolchain
apps/: CMakeLists.txt  app.cc
benchmarks/: CMakeLists.txt  boardbenchmark.cc  mathbenchmark.cc  solverbenchmark.cc
docs/: CMakeLists.txt
include/board/: boardlib.hpp
include/loader/: loaderlib.hpp
include/math/: mathlib.hpp
include/project/: version.h.in
include/solver/: solverlib.hpp
scripts/: compile_and_run.sh
shared/: CMakeLists.txt  boostmathlib.hpp  loaderlib.cc  loaderlib.hpp  version.h.in
src/: CMakeLists.txt  loaderlib.cc
tests/: CMakeLists.txt  boardtestlib.cc  mathtestlib.cc  solvertestlib.cc
tests/common/: loaderlib.cc
tests/data/: puzzle_p1.json  puzzle_p2.json  puzzle_p3.json  puzzle_p4.json  puzzle_p5.json  puzzle_p6.json  puzzle_p7.json
tests/data/killer_sudoku/: puzzle_p1.json  puzzle_p2.json  puzzle_p3.json  puzzle_p4.json
